--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   auto_route: ^2.2.0
   cloud_firestore: ^2.2.1
   cupertino_icons: ^1.0.2
+  firebase_auth: ^1.3.0
   firebase_core: ^1.2.1
   flutter_riverpod: ^0.14.0+3
   shared_preferences: ^2.0.6
@@ -33,6 +34,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  auto_route_generator: ^2.1.0
+  build_runner: ^2.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
