--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,15 @@ dependencies:
   firebase_core: ^1.2.1
   flutter_riverpod: ^0.14.0+3
   shared_preferences: ^2.0.6
+  json_annotation: ^4.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner:
+  json_serializable: ^4.1.3
+  freezed: ^0.14.2 
+    
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
