--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,12 +59,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Quantico
+      fonts:
+        - asset: assets/fonts/Quantico-Regular.ttf
+    - family: Numans
+      fonts:
+        - asset: assets/fonts/Numans-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
