--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,16 @@ dependencies:
   firebase_core: ^1.2.1
   flutter_riverpod: ^0.14.0+3
   shared_preferences: ^2.0.6
+  freezed_annotation: ^0.14.2
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   auto_route_generator: ^2.1.0
   build_runner: ^2.0.4
-
+  json_serializable: ^4.1.3
+  freezed: ^0.14.2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
