--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   firebase_auth: ^1.3.0
   firebase_core: ^1.2.1
   flutter_riverpod: ^0.14.0+3
+  flutter_svg: ^0.22.0
   freezed_annotation: ^0.14.2
+  ionicons: ^0.1.2
   shared_preferences: ^2.0.6
   url_launcher: ^6.0.6
 
@@ -43,8 +45,8 @@ dev_dependencies:
   json_serializable: ^4.1.3
 
 flutter_native_splash:
-  color: "#ffffff"
-  image: assets/images/daily_sillimanian_beta.png # Image path
+  color: "#BB1017"
+  image: assets/images/white-logo.png # Image path
   android: true
   ios: true
   # Steps
