--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dev_dependencies:
     sdk: flutter
   auto_route_generator: ^2.1.0
   build_runner: ^2.0.4
-  flutter_native_splash: ^1.2.0
+  flutter_launcher_icons: ^0.9.0
+  flutter_native_splash: ^1.0.3
   freezed: ^0.14.2
   json_serializable: ^4.1.3
 
@@ -53,6 +54,14 @@ flutter_native_splash:
   # flutter clean
   # flutter pub get
   # flutter pub run flutter_native_splash:create
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/red-logo.png"
+  # Steps
+  # flutter pub get
+  # flutter pub run flutter_launcher_icons:main
 
 flutter:
   uses-material-design: true
