--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^1.3.0
   firebase_core: ^1.2.1
-  flutter_riverpod: ^0.14.0+3
+  flutter_riverpod: ^1.0.0-dev.5
   flutter_svg: ^0.22.0
   freezed_annotation: ^0.14.2
   ionicons: ^0.1.2
